Tweaks to header to align items vertically and control vertical spacing with min-height and a fixed top margin

--- a/src/scss/2_layouts/header.scss
+++ b/src/scss/2_layouts/header.scss
@@ -28,8 +28,10 @@
 
   @include breakpoint($tab) {
     grid-template-columns: $header-template-columns;
-    margin: 0 auto;
+    margin: 1.2rem auto 0;
     max-width: $max-grid-width;
-    padding: 4.3rem 0 3rem;
+    padding: 0 20px;
+    align-items: center;
+    min-height: 11.7rem;
   }
 }
